Fix font size on mobile.

--- a/css/main.css
+++ b/css/main.css
@@ -1,28 +1,55 @@
 body {
-    background-color: #fff;
-    font-family: Monaco, monospace;
-    color: #666;
+  margin: 0;
+  font-family: 'Raleway', sans-serif;
+  font-size: 5vw;
+  background-color: #fdfaf3;
 }
 
-a {
-    color: #66CCFF;
-    text-decoration: none;
+p {
+  margin: 0;
+  padding: 1% 5%;
+}
+
+h1, h2, h3, ul {
+  padding: 0 5%;
+}
+
+h1, h2 {
+  font-family: 'Crete Round', serif;
+  margin: 0;
 }
 
 h1 {
-    font:             Bold 55px Helvetica, Tahoma, sans-serif;
-    letter-spacing:   -0.07em;
-    width: 100%
+  font-size: 12vw;
+  background-color: #eb028b;
+  color: #fff;
+  padding-bottom: 3%;
 }
 
-.post {
-    margin-bottom: 40px;
+h2 {
+  background-color: #02eb62;
+  padding-top: 2%;
+  padding-bottom: 3%;
 }
 
-.post h4 {
-    margin-bottom: 0;
+h3 {
+  color: #017531; font-weight: bold; font-size: 2.5vmax;
 }
 
-.small {
-    font-size: 0.6em;
+ul li:before {
+  content:"\2713\0020";
+}
+
+ul {
+  list-style-type: none;
+}
+
+.mt {
+  margin-top: 5%;
+}
+
+@media only screen and (min-width: 768px) {
+  body {font-size: 3vw;}
+  h1 {font-size: 8vw; padding-top: 2%;}
+  p, ul {font-size: 1.8vw;}
 }
